Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35195

Infinite loop in cb::io::mkdirp() when using non-existing drive on windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 6.0.3, 6.5.0
    • 5.5.0, 5.5.1, 5.5.2, 5.5.3, 5.5.4, 5.5.5, 6.0.0, 6.0.1, 6.0.2, 6.0.3, 6.5.0
    • memcached
    • Untriaged
    • Unknown
    • KV-Engine MH Beta part 2

    Description

      If cb::io::mkdirp is called with lets say: x:\foo and the system don't have a drive named X cb::io::mkdirp enters an infinite loop

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            trond Trond Norbye
            trond Trond Norbye
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                PagerDuty