src/dirutils.cc
@@ -19,6 +19,8 @@
 
 #ifdef _MSC_VER
 #include <direct.h>
+#include <fileapi.h>
+#include <shlobj.h>
 #define rmdir _rmdir
 #else
 
@@ -309,26 +311,45 @@ void cb::io::mkdirp(const std::string& directory) {
     }
 
 #ifdef WIN32
-    do {
-        if (CreateDirectory(directory.c_str(), nullptr)) {
-            return;
-        }
+    // ensure directory path is absolute
+    // Initial call without buffer to find size of buffer needed
+    auto ret = GetFullPathNameA(directory.c_str(), 0, nullptr, nullptr);
+    if (!ret) {
+        throw std::system_error(GetLastError(),
+                                std::system_category(),
+                                "cb::io::mkdirp(\"" + directory +
+                                        "\") failed - could not get buffer "
+                                        "size for absolute path.");
+    }
 
-        switch (GetLastError()) {
-        case ERROR_ALREADY_EXISTS:
-            return;
-        case ERROR_PATH_NOT_FOUND:
-            // one of the paths up the chain does not exists..
-            break;
-        default:
-            throw std::system_error(GetLastError(), std::system_category(),
-                                    "cb::io::mkdirp(\"" + directory +
-                                    "\") failed");
-        }
+    // make string of right size
+    std::string absPath(ret, '\0');
+    // populate absPath with the path
+    ret = GetFullPathNameA(directory.c_str(), /* rel or abs path */
+                           (DWORD)absPath.size(), /* dest buffer size */
+                           &absPath[0], /* dest buffer */
+                           nullptr /* don't need ptr to filePart */
+    );
 
-        // Try to create the parent directory..
-        mkdirp(dirname(directory));
-    } while (true);
+    if (!ret) {
+        throw std::system_error(
+                GetLastError(),
+                std::system_category(),
+                "cb::io::mkdirp(\"" + directory +
+                        "\") failed - could not get absolute path.");
+    }
+
+    auto err = SHCreateDirectoryEx(nullptr, /* no window handle */
+                                   absPath.data(),
+                                   nullptr /* no security attrs */
+    );
+    if (err != ERROR_SUCCESS) {
+        throw std::system_error(
+                err,
+                std::system_category(),
+                "cb::io::mkdirp(\"" + directory +
+                        "\") failed, could not create directory.");
+    }
 #else
     do {
         if (mkdir(directory.c_str(), S_IREAD | S_IWRITE | S_IEXEC) == 0) {
